--- a/.env
+++ b/.env
@@ -28,3 +28,11 @@ DATABASE_URL="mysql://USER:PASSWORD@127.0.0.1:3306/DATABASE?serverVersion=8.0.39
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+# Defines the format of requests and responses
+# json|xml
+FORMAT=json
+
+# Sets the autorization token to acccess API methods
+# If empty, anyone has access
+AUTH_TOKEN=
