--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,10 @@ framework:
 
     #esi: true
     #fragments: true
+    
+    validation:
+        auto_mapping:
+            'App\Entity\': []
 
 when@test:
     framework:
